--- a/sltc_personal_website/index.html
+++ b/sltc_personal_website/index.html
@@ -1,46 +1,106 @@
 <html>
 
-
 <head>
 <title>Science Lab Teaching Club </title>
-<link rel="stylesheet" href="css/style.css">
-<div class="dropdown">
-  <button class="dropbtn">Menu</button>
-    <div class="dropdown-content">
-      <a href=index.html>Home</a>
-      <a href=previousPresentations/previous.html>Previous Presentations</a>
-      <a href=contact/contactUs.html>Contact Us!</a>
-    </div>
-</div>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
-
 <body>
+  <ul id="navbar">
+    <li id="listnav">
+        <a href="#contact" id="listnavsets">Contact Us!</a>
+    </li>
+    <li id="listnav">
+      <a href="#presentations" id="listnavsets">Previous Presentations</a>
+    </li>
+      <li id="listnav">
+         <a href="#topOfPage" id="listnavsets">Home</a>
+    </li>
+  </ul>
+  <a id="topOfPage"></a>
 
-<h1 id="titleName"> Science Lab Teaching Club </h1>
+  <h1 id="titleName"> Science Lab Teaching Club </h1>
 
-<div id="summaryBlock">
-  <h2 id="summaryBlockText">Our Goal!</h2>
-  <h3 id="summaryBlockText"> SLTC strives to get kids interested in science, technology, engineering, and math (STEM) subjects through
+
+<div id="summary">
+  <div id="summaryBlock">
+    <h2 id="summaryBlockText">Our Goal!</h2>
+    <p id="summaryBlockText"><b> SLTC strives to get kids interested in science, technology, engineering, and math (STEM) subjects through
      interesting and engaging presentations and lectures.
-  </h3>
+   </b></p>
+  </div>
 </div>
-<div></div>
-<div id="aboutBlock">
-  <h2 id="aboutBlockText"> About Us! </h2>
-  <h3 id="aboutBlockText"> We meet every week on Mondays at 6:30 P.M in Knudsen 4-144. There is free pizza provided at every meeting!</h3>
+</div>
+
+<div id="about">
+  <div id="aboutBlock">
+    <h2 id="aboutBlockText"> About Us! </h2>
+    <p id="aboutBlockText"><b> We are an outreach club that goes to schools in the Los Angeles area to teach kids physics.
+      We meet every week on Mondays at 6:30 P.M in Knudsen 4-144. There is free pizza provided at every meeting!</b></p>
+  </div>
+</div>
+
+<div id="calendar">
+  <div id="calendarBlockText"><h2>Calendar</h2></div>
+    <iframe  id="googleCalendar" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=Zy51Y2xhLmVkdV9laHFjMmJxczllM2hvcjJzbXYwOXRvMjBsOEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%233F51B5&amp;color=%230B8043&amp;title=Science%20Lab%20Teaching%20Club&amp;showCalendars=0"
+      style="text-align:center; border-width:0; width:80%; height:600; text-align:center; " frameborder="300px" scrolling="no" ></iframe>
+</div>
+
+<div id="presentations">
+
+<div id="presentationBox">
+  <h2>Presentations </h2>
+  <p><b> Over the past years we have had the joy of working with many wonderful kids and teachers!
+     Here are some pictures from presentations that we have done before: </b></p>
+</div>
+
+<div id="mainGallery">
+
+<div class="gallery">
+  <a target="_blank" >
+    <img src="images\imageRedone1.jpg" alt="Forest" width="600" height="400">
+  </a>
+  <!--<div class="desc">Momentum and Gravity Booth at Grant Elementary Science Expo</div>-->
+</div>
+
+<div class="gallery">
+  <a target="_blank" >
+    <img src="images\imageRedone.JPG"  width="600" height="400">
+  </a>
+  <!--<div class="desc">Electricity Presentation Fairburn Elementary</div>-->
+</div>
+
+<div class="gallery">
+  <a target="_blank">
+    <img src="images\imageRedone2.jpeg" alt="Northern Lights" width="600" height="400">
+  </a>
+  <!--<div class="desc">Atoms Presentation at MLK Remembrance Day at UCLA</div>-->
+</div>
+
+<div class="gallery">
+  <a target="_blank" >
+    <img src="images\imageRedone3.JPG" alt="Mountains" width="600" height="400">
+  </a>
+  <!--<div class="desc">Energy Presentation at Pluralistic School One</div>-->
+    </div>
+  </div>
+
 
 </div>
 
-<div id="calendarBlock">
-  <h2> Calendar </h2>
+<div id="contact">
+  <div id="contactUsBox">
+    <h2>Contact Us!</h2>
+    <p><b>If you would like us to come and give a presentation at your school send us an email at the address below:</b></p>
+    <p id="contactUsText"><b>sciteach@physics.ucla.edu</b></p>
+  </div>
 </div>
-<div id="googleCalenar">
-<center>
-  <iframe  src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=Zy51Y2xhLmVkdV9laHFjMmJxczllM2hvcjJzbXYwOXRvMjBsOEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%233F51B5&amp;color=%230B8043&amp;title=Science%20Lab%20Teaching%20Club&amp;showCalendars=0"
-    style="position:relative; top:-680px; border-width:0;" width="80%" height="600" frameborder="300px" scrolling="no" top="-600px"></iframe>
-</center>
-</div>
+
+
+
+
+
+
 
 <div id="copyrightBox">
   <h2>&copy UCLA-SLTC 2019</h2>
